Switching LinkedList to ArrayList since profiling suggests this is likely to be faster